# exrs

./: Cargo.toml  dump.json
examples/: binance_f_orderbook.rs  binance_f_save_all_trades.rs  binance_f_websockets.rs  huobi_websockets.rs  okex_v5_rest.rs  okex_v5_websockets.rs
src/: lib.rs
src/binance/: account.rs  api.rs  client.rs  config.rs  errors.rs  general.rs  margin.rs  market.rs  mod.rs  rest_model.rs  savings.rs  userstream.rs  util.rs  websockets.rs  ws_model.rs
src/binance_f/: account.rs  api.rs  client.rs  config.rs  errors.rs  general.rs  market.rs  mod.rs  rest_model.rs  userstream.rs  util.rs  utils.rs  websockets.rs  ws_model.rs
src/huobi/: account.rs  api.rs  client.rs  config.rs  errors.rs  margin.rs  mod.rs  reference.rs  rest_model.rs  savings.rs  util.rs  websockets.rs  ws_model.rs
src/okex_v5/: account.rs  api.rs  client.rs  config.rs  errors.rs  general.rs  margin.rs  market.rs  mod.rs  rest_model.rs  userstream.rs  util.rs  websockets.rs  ws_model.rs
