[package]
name = "exrs"
version = "0.1.0"
authors = ["zp <zhenpingfeng@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-codec = "0.4.0"
actix-rt = "2.2.0"
async-recursion = "0.3.2"
awc = { version = "3.0.0-beta.8", features = ["rustls"] }
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4.19"
csv = "1.1.6"
env_logger = "0.9.0"
futures = "0.3.17"
futures-util = "0.3.17"
fxhash = "0.2.1"
hashbrown = { version = "0.11.2", features = ["serde"] }
hex = "0.4.3"
hmac = "0.11.0"
lazy_static = "1.4.0"
libdeflater = "0.7.3"
log = "0.4.14"
reqwest = { version = "0.11.5", default-features = false, features = ["json", "blocking", "rustls-tls"] }
ring = "0.16.20"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_qs = "0.8.5"
sha2 = "0.9.8"
thiserror = "1.0.29"
tokio = { version = "1.12.0", features = ["full"] }
# tokio-tungstenite = "0.15.0"
# tungstenite = { version = "0.15.0", default-features = false, features = ["rustls-tls-webpki-roots"] }
url = "2.2.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
