[package]
authors = ["zp <zhenpingfeng@gmail.com>"]
categories = ["api-bindings"]
description = "Crypto Exchanges Rust API Binding."
keywords = ["exchange", "trading", "crypto", "market"]
license = "MIT OR Apache-2.0"
name = "exrs"
edition = "2021"
readme = "README.md"
repository = "https://github.com/zhenpingfeng/exrs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-codec = "0.4.1"
actix-rt = "2.5.0"
awc = { version = "3.0.0-beta.11", features = ["rustls"] }
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4.19"
csv = "1.1.6"
env_logger = "0.9.0"
futures = "0.3.18"
futures-util = "0.3.18"
fxhash = "0.2.1"
hashbrown = { version = "0.11.2", features = ["serde"] }
hex = "0.4.3"
hmac-sha256 = "1.0.0"
lazy_static = "1.4.0"
libdeflater = "0.7.3"
log = "0.4.14"
reqwest = { version = "0.11.6", default-features = false, features = ["json", "blocking", "rustls-tls"] }
rust_decimal = "1.17.0"
rust_decimal_macros = "1.17.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
serde_qs = "0.8.5"
snmalloc-rs = { version = "0.2.28", features = ["1mib"] }
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["full"] }
url = "2.2.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
