[package]
authors = ["zp <zhenpingfeng@gmail.com>"]
categories = ["api-bindings"]
description = "Crypto Exchanges Rust API Binding."
keywords = ["exchange", "trading", "crypto", "market"]
license = "MIT OR Apache-2.0"
name = "exrs"
edition = "2021"
readme = "README.md"
repository = "https://github.com/zhenpingfeng/exrs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-codec = "0.5.1"
actix-rt = "2.9.0"
awc = { version = "3.3.0", features = ["rustls"] }
base64 = "0.21.5"
bytes = "1.5.0"
chrono = "0.4.31"
csv = "1.3.0"
env_logger = "0.10.1"
futures = "0.3.30"
futures-util = "0.3.30"
fxhash = "0.2.1"
hashbrown = { version = "0.14.3", features = ["serde"] }
hex = "0.4.3"
hmac-sha256 = "1.1.7"
lazy_static = "1.4.0"
libdeflater = "1.19.0"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["json", "rustls-tls"] }
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_qs = "0.8.5"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
uuid = { version = "1.6.1", features = ["serde", "v4", "fast-rng"] }
